# compiler

./: CMakeLists.txt  README.md  main.cpp
data/: final_dfa.txt  parsing_output.txt  parsing_table.txt  parsing_tree.txt  tokens_priorities.txt
inputs/: CFG_input_file.txt  temp.txt  temp_program.txt  temp_rules.txt
output/: token_list.txt
phase_one/automaton/: Automaton.cpp  Automaton.h  Conversions.cpp  Conversions.h  State.cpp  State.h  Types.h  Utilities.cpp  Utilities.h
phase_one/creation/: Constants.cpp  Constants.h  InfixToPostfix.cpp  InfixToPostfix.h  LexicalRulesHandler.cpp  LexicalRulesHandler.h  ToAutomaton.cpp  ToAutomaton.h
phase_one/prediction/: Predictor.cpp  Predictor.h
phase_two/: FirstFollow.cpp  FirstFollow.h  Parser.cpp  Parser.h  ReadCFG.cpp  ReadCFG.h  Table.cpp  Table.h
